[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/3d/Cockpit/Cockpit.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/3d/Shaders/CockpitScreenShader.tres" type="Shader" id=2]
[ext_resource path="res://scenes/objects/Cockpit/Cockpit.gd" type="Script" id=3]
[ext_resource path="res://assets/themes/cockpit-screen.tres" type="Theme" id=4]
[ext_resource path="res://scenes/objects/Cockpit/MainScreenCockpit.tscn" type="PackedScene" id=5]

[sub_resource type="ViewportTexture" id=1]
viewport_path = NodePath("LeftCameraViewport")

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
render_priority = 1
shader = ExtResource( 2 )
shader_param/intensity = 0.5
shader_param/RenderTarget = SubResource( 1 )

[sub_resource type="ViewportTexture" id=3]
viewport_path = NodePath("FrontCameraViewport")

[sub_resource type="ShaderMaterial" id=4]
resource_local_to_scene = true
shader = ExtResource( 2 )
shader_param/intensity = 0.5
shader_param/RenderTarget = SubResource( 3 )

[sub_resource type="ViewportTexture" id=5]
viewport_path = NodePath("RightCameraViewport")

[sub_resource type="ShaderMaterial" id=6]
resource_local_to_scene = true
shader = ExtResource( 2 )
shader_param/intensity = 0.5
shader_param/RenderTarget = SubResource( 5 )

[sub_resource type="Animation" id=7]
resource_name = "default"
tracks/0/type = "transform"
tracks/0/path = NodePath("Camera")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = PoolRealArray( 0, 1, 0, 1.17734, 1.62262, 0, 0, 0, 1, 1, 1, 1 )
tracks/1/type = "value"
tracks/1/path = NodePath("Camera:fov")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 70.0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "zoom"
length = 2.0
tracks/0/type = "transform"
tracks/0/path = NodePath("Camera")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = PoolRealArray( 0, 1, 0, 1.17734, 1.62262, 0, 0, 0, 1, 1, 1, 1, 2, 1, 0, 1.64829, 2.50164, -0.0466183, 0, 0, 0.998913, 1, 1, 1 )
tracks/1/type = "value"
tracks/1/path = NodePath("Camera:fov")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 70.0, 25.0 ]
}

[node name="Cockpit" type="Spatial"]
script = ExtResource( 3 )

[node name="Cockpit" parent="." instance=ExtResource( 1 )]

[node name="ScreenB" parent="Cockpit/CockpitStructure/CockpitPanel" index="1"]
material_override = SubResource( 2 )

[node name="ScreenC" parent="Cockpit/CockpitStructure/CockpitPanel" index="2"]
material_override = SubResource( 4 )

[node name="ScreenD" parent="Cockpit/CockpitStructure/CockpitPanel" index="3"]
material_override = SubResource( 6 )

[node name="FrontCameraViewport" type="Viewport" parent="."]
size = Vector2( 1024, 1024 )
handle_input_locally = false
msaa = 2
fxaa = true
render_target_v_flip = true
gui_disable_input = true

[node name="MainScreenCockpit" parent="FrontCameraViewport" instance=ExtResource( 5 )]
altitude = 0
speed = 0

[node name="Camera" type="Camera" parent="FrontCameraViewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.5 )
near = 1.0
far = 5000.0

[node name="RightCameraViewport" type="Viewport" parent="."]
size = Vector2( 1024, 1024 )
render_target_v_flip = true

[node name="Camera" type="Camera" parent="RightCameraViewport"]
transform = Transform( 0.5, 0, -0.866025, 0, 1, 0, 0.866025, 0, 0.5, 3.5, 0, 0.6 )
near = 1.0
far = 5000.0

[node name="CanvasLayer" type="CanvasLayer" parent="RightCameraViewport"]

[node name="Control" type="Control" parent="RightCameraViewport/CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="RightCameraViewport/CanvasLayer/Control"]
anchor_right = 1.0
margin_bottom = 129.0
theme = ExtResource( 4 )
text = "RIGHT VIEW"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftCameraViewport" type="Viewport" parent="."]
size = Vector2( 1024, 1024 )
render_target_v_flip = true

[node name="Camera" type="Camera" parent="LeftCameraViewport"]
transform = Transform( 0.5, 0, 0.866025, 0, 1, 0, -0.866025, 0, 0.5, -3.5, 0, 0.6 )
near = 1.0
far = 5000.0

[node name="CanvasLayer" type="CanvasLayer" parent="LeftCameraViewport"]

[node name="Control" type="Control" parent="LeftCameraViewport/CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="LeftCameraViewport/CanvasLayer/Control"]
anchor_right = 1.0
margin_bottom = 129.0
theme = ExtResource( 4 )
text = "LEFT VIEW"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FrontCameraPosition" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.5 )

[node name="RightCameraPosition" type="Position3D" parent="."]
transform = Transform( 0.5, 0, -0.866025, 0, 1, 0, 0.866025, 0, 0.5, 3.5, 0, 0.6 )

[node name="LeftCameraPosition" type="Position3D" parent="."]
transform = Transform( 0.5, 0, 0.866025, 0, 1, 0, -0.866025, 0, 0.5, -3.5, 0, 0.6 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.17734, 1.62262 )
far = 4.0

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.687975, 1.43364 )
light_color = Color( 0.572549, 0, 0, 1 )
light_energy = 0.5
light_specular = 0.83
light_bake_mode = 0
omni_range = 2.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "default"
anims/default = SubResource( 7 )
anims/zoom = SubResource( 8 )

[editable path="Cockpit"]
